# Pixiv-MultiPlatform

./: .editorconfig  README.md  README_EN.md  build.gradle.kts  diff_strings_xml_keys.py  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yaml  publish-release.yml  windows-desktop-build.yml
composeApp/: build.gradle.kts  core-rules.pro  desktop-rules.pro
composeApp/schemas/top.kagg886.pmf.backend.database.AppDatabase/: 10.json  8.json  9.json
composeApp/src/commonMain/composeResources/files/: aboutlibraries.json  comment-media.json
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-en/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rTW/: string.xml
composeApp/src/commonMain/kotlin/top/kagg886/pmf/: App.kt
composeApp/src/commonTest/kotlin/: ImageCopyTest.kt  SizeTest.kt
gradle/: libs.versions.toml
iosApp/Pixiv-MultiPlatform.xcodeproj/: project.pbxproj
lib/chip-text-field/: build.gradle.kts
lib/compose-settings/: README.md  build.gradle.kts
lib/epub/: build.gradle.kts
lib/file-picker/: build.gradle.kts
lib/file-picker/src/rust/: Cargo.toml
lib/file-picker/src/rust/src/: jvm.rs
lib/gif/: build.gradle.kts
lib/gif/src/iosMain/interop/: libgif_rust.def
lib/gif/src/rust/: CMakeLists.txt  Cargo.toml  rustfmt.toml
lib/gif/src/rust/src/: jvm.rs
lib/ktor-reqwest-engine/: build.gradle.kts
lib/ktor-reqwest-engine/src/iosMain/interop/: libkeqwest.def
lib/ktor-reqwest-engine/src/iosMain/interop/include/: keqwest.h
lib/ktor-reqwest-engine/src/rust/: CMakeLists.txt  Cargo.toml
lib/ktor-reqwest-engine/src/rust/src/: jvm.rs  lib.rs
lib/multiplatform-serializer-fix/: build.gradle.kts
lib/okio-enhancement-util/: build.gradle.kts
(+124 files in other folders)
