[package]
name = "filepicker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
jvm = ["dep:jni"]

[dependencies]
jni = { version = "0.22", optional = true }
rfd = { version = "0.17"}
futures = "0.3"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
