[package]
name = "gif_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
jvm = ["dep:jni"]

[dependencies]
jni = { version = "0.22", optional = true }
image = { default-features = false, version = "0.25", features = ["png", "jpeg", "color_quant"] }
gif = { version = "0.14", default-features = false, features = ["std"] }
color_quant = "1.1"
serde_cbor = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["rt-multi-thread"] }

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
